# float-sat

./: .gitignore  .gitmodules  CMakeLists.txt  analyze-code.sh  currentCalib  for_new_clones.txt  generate.sh  obc-build.sh  project.yml  quickflash.sh  start.sh
Documentation/: AppIDs.txt  CablesToColors  Mode-plan  Pinout-planning.txt
MatlabPlotters/: ADCS.m  PlotColumn.m  ReactionWheelControlStd.m  SensorData.m  Watchdog.m
apps/adcs/: app.yml
apps/adcs/Backup/include/: adcs.h
apps/adcs/Backup/src/: adcs.cpp
apps/adcs/include/: adcs.h
apps/adcs/src/: PI_testing.cpp  adcs.cpp  basic_kalman.cpp
apps/commander/: app.yml
apps/commander/include/: commander.h
apps/commander/src/: commander.cpp
apps/control-master/: app.yml
apps/control-master/include/: control-master.h
apps/control-master/src/: control-master.cpp
apps/housekeeper/: app.yml
apps/housekeeper/include/: housekeeper.h
apps/housekeeper/src/: housekeeper.cpp
apps/mission/: app.yml
apps/mission/include/: mission.h
apps/mission/src/: mission.cpp
apps/pcdu/: app.yml
apps/pcdu/include/: pcdu.h
apps/pcdu/src/: pcdu.cpp
apps/power/: app.yml
apps/power/include/: power.h
apps/power/src/: power.cpp
apps/reaction-wheel-control/: app.yml
apps/reaction-wheel-control/include/: reaction-wheel-control.h
apps/reaction-wheel-control/src/: reaction-wheel-control.cpp
apps/reader/Backup/: app.yml  lsm9ds1.cpp  lsm9ds1.h  lsm9ds1_def.h
apps/reader/Backup/include/: reader.h
apps/reader/Backup/src/: reader.cpp
apps/reader/include/: reader.h
apps/reader/src/: reader.cpp
apps/rpi-connector/: app.yml
apps/rpi-connector/include/: rpi-connector.h
apps/rpi-connector/src/: rpi-connector.cpp
apps/sensor-collector/: app.yml
apps/sensor-collector/include/: sensor-collector.h
apps/sensor-collector/src/: sensor-collector.cpp
apps/sensors/: app.yml
apps/sensors/include/: sensors.h
apps/sensors/src/: sensors.cpp
apps/solar-array-control/: app.yml
apps/solar-array-control/include/: solar-array-control.h
apps/solar-array-control/src/: solar-array-control.cpp
apps/transceiver/: app.yml
apps/transceiver/include/: transceiver.h
apps/transceiver/src/: transceiver.cpp
apps/watchdog/: app.yml
apps/watchdog/include/: watchdog.h
apps/watchdog/src/: watchdog.cpp
build-corfu-host-tools/: version.hpp
build-corfu-host-tools/build-tools/generator/test/: corfu-generator-test[1]_include.cmake
build-corfu-host-tools/ground-tools/cl/: corfu-master
build-corfu-host-tools/ground-tools/ground/QtAdditions/QtAdditions_autogen/: mocs_compilation.cpp
build-corfu-host-tools/ground-tools/ground/corfu-ground_autogen/: mocs_compilation.cpp
build-corfu-host-tools/ground-tools/router/: router
build-corfu-host-tools/libs/libcorfu-basic/test/: libcorfu-basic-test[1]_include.cmake
build-corfu-host-tools/libs/libcorfu-config-parser/test/: libcorfu-config-parser-test[1]_include.cmake
drivers/lidar/include/: VL53L4CD_api.h  VL53L4CD_calibration.h
drivers/lidar/src/: VL53L4CD_api.cpp  VL53L4CD_calibration.cpp
drivers/vl53l4ed/src/: VL53L4ED_api.cpp  platform.cpp
ground-files/: corfuground-settings.yml  log.txt  tmfile08.11.2024-15:15:53.yml  tmfile14.11.2024-14:28:03.yml  tmfile15.11.2024-13:25:46.yml  tmfile15.11.2024-14:52:01.yml  tmfile15.11.2024-15:17:12.yml  tmfile17.11.2024-14:27:38.yml  tmfile18.10.2024-11:47:52.yml  tmfile21.11.2024-10:52:07.yml  tmfile21.11.2024-12:28:59.yml  tmfile21.11.2024-14:08:08.yml  tmfile21.11.2024-14:08:25.yml  tmfile21.11.2024-14:27:17.yml  tmfile21.11.2024-14:27:57.yml  tmfile31.10.2024-14:09:28.yml
nodes/main-node/: node.yml
nodes/main-node/src/: node.cpp
raspi/: README.md  compall.sh  pythonsoc.py
raspi/ledCommunications/: a.out  aold.out  comp.sh  ledComms.cpp  libcppgpio.so.1.0.0
raspi/router/: router.cpp
scripts-for-ground/: anomaly-decoder.py  newVLC.cpp  optical_ground_station.py  optical_ground_station_new.py  quickflash.sh  show-map.py
ui-layouts/: AnomalyLayout.clay  tet.clay
ui-layouts/custom-widgets/: CMakeLists.txt  loader.cpp  loader.h
ui-layouts/custom-widgets/plottingWidget/: CMakeLists.txt  plottingWidget.cpp  plottingWidget.h  plottingWidget.ui
ui-layouts/custom-widgets/pointingWidget/: CMakeLists.txt  pointingWidget.cpp  pointingWidget.h  pointingWidget.ui
ui-layouts/custom-widgets/rswidget/: CMakeLists.txt  rswidget.cpp  rswidget.h  rswidget.ui
ui-layouts/custom-widgets/widget1/: CMakeLists.txt  widget1.cpp  widget1.h  widget1.ui
ui-layouts/tmp/: lastSession.yml  main-node1.clay  main-node255.clay
(+40 files in other folders)
